# busylight

./: .gitignore  CMakeLists.txt  appunti  main.c  platformio.ini
bak/: usb_descriptors.h
bck/: main.c
include/: cust_tusb_config.h  overrides.cpp  overrides.h  usb_descriptors.c  usb_descriptors.cpp
src/: main.c  main.cpp  usb_descriptors.c
